Bug 132555 - FILEOPEN PPTX: border around image is missing
Summary: FILEOPEN PPTX: border around image is missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords:
: 85127 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-04-30 13:10 UTC by Gerald Pfeifer
Modified: 2020-09-02 16:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (39.60 KB, application/vnd.ms-powerpoint)
2020-04-30 13:10 UTC, Gerald Pfeifer
Details
How it looks in Office 365 (29.23 KB, image/png)
2020-04-30 13:12 UTC, Gerald Pfeifer
Details
This is how it looks in LO - border missing (31.59 KB, image/png)
2020-04-30 13:13 UTC, Gerald Pfeifer
Details
Sample slide (PPTX) (2.48 MB, application/vnd.ms-powerpoint)
2020-04-30 13:16 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2020-04-30 13:10:24 UTC
Created attachment 160126 [details]
Sample slide (PPTX)

This does not look like one of the effects (and Office 365 does not invoke
the effects UI elements), still in Office 365 there is a border around this
image and in LibreOffice 6.x and 7.0 alpha there is not.
Comment 1 Gerald Pfeifer 2020-04-30 13:12:33 UTC
Created attachment 160128 [details]
How it looks in Office 365
Comment 2 Gerald Pfeifer 2020-04-30 13:13:04 UTC
Created attachment 160129 [details]
This is how it looks in LO - border missing
Comment 3 Gerald Pfeifer 2020-04-30 13:16:09 UTC
Created attachment 160130 [details]
Sample slide (PPTX)
Comment 4 Mike 2020-06-07 16:44:14 UTC
reproduced in

Version: 7.0.0.0.beta1 (x64)
Build ID: 94f789cbb33335b4a511c319542c7bdc31ff3b3c
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2020-08-18 19:51:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b2d834d6727626f070bb4dde3e1c65da1169f729

tdf#132555 PPTX VML import: handle stroke properties of image shapes

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Miklos Vajna 2020-08-19 07:28:42 UTC
I think this is now fixed on master.
Comment 7 Commit Notification 2020-08-19 11:00:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/0bd854d18da7aa65a1d7141c1ee18056d20462fb

tdf#132555 PPTX VML import: handle stroke properties of image shapes

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gerald Pfeifer 2020-08-23 10:02:33 UTC
Yes, I am happy to confirm this is fixed in current 7.1/head builds.
Thank you!
Comment 9 NISZ LibreOffice Team 2020-09-02 16:21:35 UTC
*** Bug 85127 has been marked as a duplicate of this bug. ***