tdf#132555 PPTX VML import: handle stroke properties of image shapes

ComplexShape::implConvertAndInsert() returns early in the graphic object
shape case, so stroke model is not applied at all.

Also fix a problem in ShapeBase::finalizeFragmentImport(), where the
shape type had no stroke, but the shape itself had, and the later should
win.

The warning in OleObjectGraphicDataContext::onCreateContext() now points
out that <mc:AlternateContent> is ignored as a child of <a:graphicData>,
which probably should be addressed at some stage, but it's not required
to fix the missing stroke.

(cherry picked from commit b2d834d6727626f070bb4dde3e1c65da1169f729)

Change-Id: I4ab43b4c6d40d9f43caad22b85f5b885fa8b4ef1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100971
Tested-by: Jenkins
Reviewed-by: Gülşah Köse <gulsah.kose@collabora.com>