oox/source/drawingml/graphicshapecontext.cxx
@@ -226,6 +226,8 @@ ContextHandlerRef OleObjectGraphicDataContext::onCreateContext( sal_Int32 nEleme
             return new GraphicShapeContext( *this, mpMasterShapePtr, mpShapePtr );
         break;
     }
+    SAL_WARN("oox", "OleObjectGraphicDataContext::onCreateContext: unhandled element: "
+                        << getBaseToken(nElement));
     return nullptr;
 }
 
